syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.pollux.grpcdemo.helloworld.api";
option java_outer_classname = "HelloWorld";
option objc_class_prefix = "HLW";


service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;    //请求名称
}

message HelloReply {
    string message = 1; //回复消息
}